# autodealer

./: .env  Cargo.toml
src/: config.rs  database.rs  main.rs
src/handlers/: brand_handlers.rs  car_handlers.rs  car_model_handlers.rs  customer_handlers.rs  mod.rs  part_handlers.rs  purchase_handlers.rs  service_campaign_handlers.rs  warehouse_handler.rs  work_handlers.rs
src/migrations/: 001_create_tables.sql  003_create_parts_table.sql  004_create_brands_and_models.sql  005_update_car_table.sql
src/models/: brand.rs  car.rs  car_model.rs  customer.rs  enums.rs  mod.rs  part.rs  purchase.rs  service_campaigns.rs  warehouse.rs  work.rs
src/openapi/: brands-openapi.yaml  car-models-openapi.yaml  cars-openapi.yaml  customers-openapi.yaml  paths-openapi.yaml  purchases-openapi.yaml  service-campaigns-openapi.yaml  warehouse-openapi.yaml  works-openapi.yaml
src/repositories/: brand_repository.rs  car_model_repository.rs  car_repository.rs  customer_repository.rs  mod.rs  part_repository.rs  purchase_repository.rs  service_campaign_repository.rs  warehouse_repository.rs  work_repository.rs
src/routes/: mod.rs
