[package]
name = "autodealer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# База данных - добавляем bigdecimal
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Утилиты
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Логирование
env_logger = "0.10"
log = "0.4"

# Валидация
validator = { version = "0.16", features = ["derive"] }

# Для async trait'ов
async-trait = "0.1"
serde_json = "1.0.145"